--- a/package.json
+++ b/package.json
@@ -34,12 +34,8 @@
     "globals": "^16.5.0",
     "jsdom": "^27.4.0",
     "tailwindcss": "^4.1.18",
-<<<<<<< HEAD
-    "vite": "npm:rolldown-vite@7.2.5",
+    "vite": "^5.0.0",
     "vitest": "^4.0.18"
-=======
-    "vite": "^5.0.0"
->>>>>>> d028cb6 (fixed from laptop)
   },
   "overrides": {
     "vite": "^5.0.0"
